[gd_scene load_steps=26 format=2]

[ext_resource path="res://scenes/popups/popup.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/popups/game_over.gd" type="Script" id=2]
[ext_resource path="res://images/popups/game_over.png" type="Texture" id=3]
[ext_resource path="res://fonts/polygon.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://fonts/effloresce.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://images/popups/broccoli_square_disabled.png" type="Texture" id=6]
[ext_resource path="res://images/popups/broccoli_square.png" type="Texture" id=7]
[ext_resource path="res://images/popups/video.png" type="Texture" id=8]
[ext_resource path="res://images/popups/video_pressed.png" type="Texture" id=9]
[ext_resource path="res://images/popups/video_disabled.png" type="Texture" id=10]
[ext_resource path="res://images/popups/used.png" type="Texture" id=11]
[ext_resource path="res://images/popups/usado.png" type="Texture" id=12]
[ext_resource path="res://images/popups/go_back.png" type="Texture" id=13]
[ext_resource path="res://images/popups/go_back_pressed.png" type="Texture" id=14]

[sub_resource type="Animation" id=1]

resource_name = "game_over"
length = 0.5
loop = false
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("window:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="DynamicFont" id=2]

size = 110
outline_size = 0
outline_color = Color( 1, 1, 1, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 4 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="GDScript" id=3]

script/source = "extends Label

func _ready():
	set_text(game.lang.GAME_OVER)
	var s = game.lang.GAME_OVER_SCALE
	set_scale(Vector2(s, s))
"

[sub_resource type="DynamicFont" id=4]

size = 40
outline_size = 0
outline_color = Color( 1, 1, 1, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 5 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="GDScript" id=5]

script/source = "extends Label

func _ready():
	set_text(game.lang.GAME_OVER_MSG)
"

[sub_resource type="DynamicFont" id=6]

size = 70
outline_size = 0
outline_color = Color( 1, 1, 1, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 4 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="GDScript" id=7]

script/source = "extends Node2D

func _ready():
	if game.lang.language == \"es\":
		$used_es.show()
	else:
		$used_en.show()
"

[sub_resource type="DynamicFont" id=8]

size = 40
outline_size = 0
outline_color = Color( 1, 1, 1, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 5 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="GDScript" id=9]

script/source = "extends Label

func _ready():
	set_text(game.lang.GAME_OVER_OR)
"

[sub_resource type="DynamicFont" id=10]

size = 55
outline_size = 0
outline_color = Color( 1, 1, 1, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 5 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="GDScript" id=11]

script/source = "extends Label


func _ready():
	set_text(game.lang.GO_BACK)
"

[node name="game_over" index="0" groups=[
"resizable",
] instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="animation" parent="." index="0"]
anims/game_over = SubResource( 1 )

[node name="clickable_space" parent="." index="1"]
visible = false

[node name="window" parent="." index="2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -435.0
margin_top = -531.0
margin_right = 436.0
margin_bottom = 372.0
rect_pivot_offset = Vector2( 435, 451 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Pause", "Rect", "Transform", "Visibility" ]

[node name="title" type="Label" parent="window" index="0"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -462.0
margin_top = -367.0
margin_right = 446.0
margin_bottom = -242.0
rect_pivot_offset = Vector2( 454, 62.5 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.8125, 0.126953, 0.126953, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 4
custom_constants/shadow_offset_y = 4
custom_constants/shadow_as_outline = 0
text = "GAME OVER"
align = 1
valign = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
script = SubResource( 3 )
_sections_unfolded = [ "Rect", "custom_colors", "custom_constants", "custom_fonts" ]

[node name="subtitle" type="Label" parent="window" index="1"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -321.0
margin_top = -694.0
margin_right = 311.0
margin_bottom = -594.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
text = "No more moves available"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
script = SubResource( 5 )
_sections_unfolded = [ "Rect", "custom_colors", "custom_constants", "custom_fonts" ]

[node name="video_button" type="Container" parent="window" index="2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -4.0
margin_top = -20.0
margin_right = 36.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="bg_disabled" type="Sprite" parent="window/video_button" index="0"]
visible = false
texture = ExtResource( 6 )

[node name="bg" type="Sprite" parent="window/video_button" index="1"]
texture = ExtResource( 7 )

[node name="n" type="Label" parent="window/video_button" index="2"]
modulate = Color( 0, 0.666667, 0, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -91.0
margin_top = -91.0
margin_right = 17.0
margin_bottom = -17.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
text = "+1"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Visibility", "custom_colors", "custom_constants", "custom_fonts" ]

[node name="video_btn" type="TextureButton" parent="window/video_button" index="3"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -124.0
margin_top = -18.0
margin_right = 136.0
margin_bottom = 159.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 9 )
texture_disabled = ExtResource( 10 )
_sections_unfolded = [ "Rect", "Textures" ]

[node name="used" type="Node2D" parent="window/video_button" index="4"]
visible = false
script = SubResource( 7 )

[node name="used_en" type="Sprite" parent="window/video_button/used" index="0"]
visible = false
position = Vector2( 18, 21 )
rotation = -0.587862
texture = ExtResource( 11 )
_sections_unfolded = [ "Visibility" ]

[node name="used_es" type="Sprite" parent="window/video_button/used" index="1"]
visible = false
position = Vector2( 18, 21 )
rotation = -0.587862
texture = ExtResource( 12 )
_sections_unfolded = [ "Visibility" ]

[node name="or" type="Label" parent="window" index="3"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = 122.0
margin_right = 50.0
margin_bottom = 222.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 8 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
text = "OR"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
script = SubResource( 9 )
_sections_unfolded = [ "Rect", "custom_colors", "custom_constants", "custom_fonts" ]

[node name="go_back_btn" type="TextureButton" parent="window" index="4"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -130.0
margin_top = 222.0
margin_right = 130.0
margin_bottom = 345.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 13 )
texture_pressed = ExtResource( 14 )
_sections_unfolded = [ "Rect", "Textures" ]

[node name="text" type="Label" parent="window/go_back_btn" index="0"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 10 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
text = "Go Back"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
script = SubResource( 11 )
_sections_unfolded = [ "Custom Colors", "Custom Constants", "Custom Fonts", "Script" ]

[connection signal="pressed" from="window/video_button/video_btn" to="." method="_on_video_btn_pressed"]
[connection signal="pressed" from="window/go_back_btn" to="." method="_on_go_back_btn_pressed"]
